--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.16",
+    "@types/nodemailer": "^6.4.15",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "cors": "^2.8.5",
@@ -43,6 +44,9 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "joi": "^17.13.3"
+    "crypto": "^1.0.1",
+    "joi": "^17.13.3",
+    "mongoose": "^8.5.4",
+    "nodemailer": "^6.9.14"
   }
 }
