--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "joi": "^17.13.3",
     "mongoose": "^8.5.4",
     "nodemailer": "^6.9.14",
+    "path-to-regexp": "^7.2.0",
     "uuid": "^10.0.0"
   }
 }
