--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "firebase-admin": "^12.4.0",
     "joi": "^17.13.3",
     "mongoose": "^8.5.4",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "path-to-regexp": "^7.2.0",
     "uuid": "^10.0.0"
