--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.17.9",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -50,10 +51,12 @@
     "firebase": "^10.13.1",
     "firebase-admin": "^12.4.0",
     "joi": "^17.13.3",
+    "lodash": "^4.17.21",
     "mongoose": "^8.5.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "path-to-regexp": "^7.2.0",
+    "redis": "^4.7.0",
     "uuid": "^10.0.0"
   }
 }
