--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "tsc-alias": "^1.8.8",
     "typeorm": "^0.3.20",
     "typescript": "^5.3.3",
-    "winston": "^3.13.0"
+    "winston": "^3.15.0"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -52,6 +52,7 @@
     "firebase-admin": "^12.4.0",
     "joi": "^17.13.3",
     "lodash": "^4.17.21",
+    "logform": "^2.6.1",
     "mongoose": "^8.5.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
