--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "redis": "^4.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "tsoa": "^6.5.1",
     "uuid": "^10.0.0"
   }
 }
