--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "firebase": "^10.13.1",
     "firebase-admin": "^12.4.0",
     "joi": "^17.13.3",
